Session star error fix
E mais uns concertos para funcoes serem chamadas

--- a/dashboard.html
+++ b/dashboard.html
@@ -46,6 +46,7 @@
                 </a>
             </nav>
             <button class="logout-button" onclick="redirectToIndex()">Sair</button>
+            <button class="change-password-button" onclick="window.location.href='perfil.php'">Alterar Senha</button>
         </div>
         <div class="content-area">
             <header class="dashboard-header">
