--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <script>
@@ -27,22 +28,30 @@
     <div class="dashboard-container">
         <div class="sidebar">
             <div class="user-profile">
-                <img src="https://via.placeholder.com/80" alt="Foto do usuário" class="profile-pic">
+                <img id="profile-pic" src="foto perfil/perfil 1.svg" alt="Foto do usuário" class="profile-pic">
+                <button class="change-pic-btn" onclick="openPicModal()" title="Alterar foto de perfil">
+                    <i class="fas fa-camera"></i>
+                </button>
                 <h3 id="username">Nome do Usuário</h3>
                 <p id="user-email">usuario@email.com</p>
             </div>
             <nav>
                 <ul>
-                    <li><a href="home.html"><i class="fas fa-home"></i> Início</a></li>
-                    <li><a href="perfil.html"><i class="fas fa-user"></i> Perfil</a></li>
-                    <li><a href="configuracoes.html"><i class="fas fa-cog"></i> Configurações</a></li>
-                    <li class="logout"><a href="#" onclick="redirectToIndex()"><i class="fas fa-sign-out-alt"></i> Sair</a></li>
+                    <li><a href="home.html"><i class="fas fa-home"></i> <span>Início</span></a></li>
+                    <li><a href="perfil.html"><i class="fas fa-user"></i> <span>Perfil</span></a></li>
+                    <li><a href="config.html"><i class="fas fa-cog"></i> <span>Configurações</span></a></li>
                 </ul>
             </nav>
-            <button class="change-password-button" onclick="window.location.href='perfil.php'">Alterar Senha</button>
-            <button class="delete-account-button" onclick="window.location.href='perfil.html'">Apagar Conta</button>
+            <a href="#" class="logout-btn" onclick="redirectToIndex()">
+                <i class="fas fa-sign-out-alt"></i> Sair
+            </a>
         </div>
         <div class="content-area">
+            <div class="theme-toggle-container">
+                <button class="theme-toggle" onclick="toggleTheme()" title="Alternar tema">
+                    <i class="fas fa-moon"></i>
+                </button>
+            </div>
             <header class="dashboard-header">
                 <h1>Bem-vindo ao Dashboard</h1>
                 <p>Gerencie suas tarefas e produtividade</p>
@@ -124,32 +133,60 @@
         </div>
     </div>
 
+    <!-- Modal de seleção de foto de perfil -->
+    <div id="pic-modal" class="pic-modal hidden">
+        <div class="pic-modal-content">
+            <span class="close-pic-modal" onclick="closePicModal()">&times;</span>
+            <h3>Escolha sua foto de perfil</h3>
+            <div class="pic-options">
+                <img src="foto perfil/perfil 1.svg" onclick="selectProfilePic('foto perfil/perfil 1.svg')" alt="Perfil 1">
+                <img src="foto perfil/perfil 2.svg" onclick="selectProfilePic('foto perfil/perfil 2.svg')" alt="Perfil 2">
+                <img src="foto perfil/perfil 3.svg" onclick="selectProfilePic('foto perfil/perfil 3.svg')" alt="Perfil 3">
+                <img src="foto perfil/perfil 4.svg" onclick="selectProfilePic('foto perfil/perfil 4.svg')" alt="Perfil 4">
+                <img src="foto perfil/perfil 5.svg" onclick="selectProfilePic('foto perfil/perfil 5.svg')" alt="Perfil 5">
+                <img src="foto perfil/perfil 6.svg" onclick="selectProfilePic('foto perfil/perfil 6.svg')" alt="Perfil 6">
+            </div>
+        </div>
+    </div>
+
     <script>
-        // Função para carregar atividades
-        async function loadActivities() {
-            const response = await fetch('get_atividades.php');
+        let selectedDate = null;
+
+        // Função para carregar atividades do dia selecionado
+        async function loadActivities(date = null) {
+            // Se não passar data, usa a de hoje
+            if (!date) {
+                const today = new Date();
+                date = today.toISOString().split('T')[0];
+            }
+            // Exemplo: busca atividades por data (ajuste para seu backend se necessário)
+            const response = await fetch('get_atividades.php?date=' + date);
             const activities = await response.json();
             const activityList = document.getElementById('activity-list');
             activityList.innerHTML = '';
 
-            activities.forEach(activity => {
-                const li = document.createElement('li');
-                li.classList.add('activity');
-                li.innerHTML = `
-                    <div class="activity-header" onclick="toggleActivity(this)">
-                        <span class="activity-title">${activity.time} - ${activity.title}</span>
-                        <button class="toggle-button">+</button>
-                    </div>
-                    <div class="activity-details hidden">
-                        <p class="activity-description">${activity.description}</p>
-                        <div class="activity-actions">
-                            <button class="edit-button" onclick="openEditActivityModal(${activity.id})">Editar</button>
-                            <button class="delete-button" onclick="deleteActivity(${activity.id})">Excluir</button>
+            if (activities.length === 0) {
+                activityList.innerHTML = '<li class="activity">Nenhuma atividade para este dia.</li>';
+            } else {
+                activities.forEach(activity => {
+                    const li = document.createElement('li');
+                    li.classList.add('activity');
+                    li.innerHTML = `
+                        <div class="activity-header" onclick="toggleActivity(this)">
+                            <span class="activity-title">${activity.time} - ${activity.title}</span>
+                            <button class="toggle-button">+</button>
                         </div>
-                    </div>
-                `;
-                activityList.appendChild(li);
-            });
+                        <div class="activity-details hidden">
+                            <p class="activity-description">${activity.description}</p>
+                            <div class="activity-actions">
+                                <button class="edit-button" onclick="openEditActivityModal(${activity.id})">Editar</button>
+                                <button class="delete-button" onclick="deleteActivity(${activity.id})">Excluir</button>
+                            </div>
+                        </div>
+                    `;
+                    activityList.appendChild(li);
+                });
+            }
         }
 
         // Função para abrir o modal de adicionar atividade
@@ -180,7 +217,10 @@
         }
 
         // Gera o calendário ao carregar a página
-        document.addEventListener('DOMContentLoaded', generateCalendar);
+        document.addEventListener('DOMContentLoaded', function() {
+            generateCalendar();
+            loadActivities(); // <-- Isso garante que as atividades de hoje aparecem ao entrar
+        });
 
         // Função para gerar os dias do calendário
         function generateCalendar() {
@@ -230,6 +270,18 @@
                         dayCell.classList.add('today');
                     }
 
+                    // Clique para selecionar o dia
+                    dayCell.addEventListener('click', function() {
+                        // Formata a data para yyyy-mm-dd
+                        const selected = new Date(currentYear, currentMonth, day);
+                        selectedDate = selected.toISOString().split('T')[0];
+                        loadActivities(selectedDate);
+
+                        // Destaca o dia selecionado
+                        document.querySelectorAll('.calendar-grid .day').forEach(d => d.classList.remove('selected'));
+                        dayCell.classList.add('selected');
+                    });
+
                     calendarGrid.appendChild(dayCell);
                 }
             }
@@ -268,6 +320,38 @@
                 window.location.href = "dashboard.html";
             }
         }
+
+        function toggleTheme() {
+            document.body.classList.toggle('dark-mode');
+            // Troca o ícone do botão correto
+            const btn = document.querySelector('.theme-toggle-container .theme-toggle i');
+            if(document.body.classList.contains('dark-mode')) {
+                btn.classList.remove('fa-moon');
+                btn.classList.add('fa-sun');
+            } else {
+                btn.classList.remove('fa-sun');
+                btn.classList.add('fa-moon');
+            }
+        }
+
+        function openPicModal() {
+            document.getElementById('pic-modal').classList.remove('hidden');
+        }
+        function closePicModal() {
+            document.getElementById('pic-modal').classList.add('hidden');
+        }
+        function selectProfilePic(src) {
+            document.getElementById('profile-pic').src = src;
+            localStorage.setItem('profilePic', src); // Salva escolha no navegador
+            closePicModal();
+        }
+        // Carrega a foto escolhida ao abrir o dashboard
+        window.addEventListener('DOMContentLoaded', function() {
+            const savedPic = localStorage.getItem('profilePic');
+            if (savedPic) {
+                document.getElementById('profile-pic').src = savedPic;
+            }
+        });
     </script>
             <!-- Botão do SAC -->
     <div class="sac-flutuante">
